# moveit_dp_redundancy_resolution

./: Readme.md
fourr_kazerounian_controller/: CMakeLists.txt  Readme.md  package.xml
fourr_kazerounian_controller/config/: ws_trajectory.yaml  ws_trajectory_matlab.yaml  ws_trajectory_yaw_0.yaml
fourr_kazerounian_controller/launch/: fourr_kazerounian_controller.launch
fourr_kazerounian_controller/src/: fourr_kazerounian_controller.cpp
fourr_kazerounian_description/: CMakeLists.txt  LICENSE.txt  Readme.md  package.xml
fourr_kazerounian_description/robots/: fourr_planar.urdf
fourr_kazerounian_moveit_config/: .setup_assistant  CMakeLists.txt  Readme.md  package.xml
fourr_kazerounian_moveit_config/config/: dp_redundancy_solver.yaml  fake_controllers.yaml  fourr_planar.srdf  joint_limits.yaml  kinematics.yaml  objective_function.xml  ompl_planning.yaml  rqt_multiplot.xml
fourr_kazerounian_moveit_config/launch/: default_warehouse_db.launch  demo.launch  dp_redundancy_solver.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_dp_redundancy_resolution/: CMakeLists.txt  Readme.md  moveit_dp_redundancy_resolution_capability_plugin_description.xml  package.xml
moveit_dp_redundancy_resolution/include/moveit_dp_redundancy_resolution/: dp_redundancy_resolution_capability.h  dynamic_programming_solver.h  exceptions.h  objective_function.h  state_space_grid.h  workspace_trajectory.h
moveit_dp_redundancy_resolution/src/: dp_redundancy_resolution_capability.cpp  dynamic_programming_solver.cpp  objective_function.cpp  state_space_grid.cpp  workspace_trajectory.cpp
moveit_dp_redundancy_resolution_msgs/: CMakeLists.txt  Readme.md  package.xml
moveit_dp_redundancy_resolution_msgs/msg/: WorkspaceTrajectory.msg
moveit_dp_redundancy_resolution_msgs/srv/: GetOptimizedJointsTrajectory.srv
panda_controller/: CMakeLists.txt  Readme.md  package.xml
panda_controller/config/: trajectory.yaml
panda_controller/launch/: panda_controller.launch
panda_controller/src/: panda_controller.cpp
panda_controller/trajectories/: square_trajectory.traj  square_trajectory_with_time_jump.traj
panda_ikfast_panda_arm_plugin/: CMakeLists.txt  Readme.md  package.xml  panda_panda_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
panda_ikfast_panda_arm_plugin/src/: panda_panda_arm_ikfast_moveit_plugin.cpp  panda_panda_arm_ikfast_solver.cpp
panda_moveit_config/: .setup_assistant  Readme.md  package.xml
panda_moveit_config/config/: dp_redundancy_solver.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  objective_function.xml  ompl_planning.yaml  panda.srdf  rqt_multiplot.xml
panda_moveit_config/launch/: dp_redundancy_solver.launch  move_group.launch  moveit.rviz
